--- a/.gitattributes
+++ b/.gitattributes
@@ -1,3 +1,3 @@
 * linguist-vendored
-*.html linguist-vendored=false
-*.r linguist-vendored=true
+*.html linguist-detectable=false
+*.r linguist-detectable=true
